@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-17T08:15:36Z",
+  "timestamp" : "2024-05-18T00:55:01Z",
   "count_outdated" : 1648,
   "uniques_outdated" : 904,
-  "count" : 1664,
+  "count" : 1665,
   "uniques" : 916,
   "clones" : [
     {
@@ -79,9 +79,9 @@
     },
     {
       "timestamp": "2024-05-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
